tests/ui/hygiene/cross-crate-redefine.stderr
error[E0428]: the name `MyStruct` is defined multiple times
  --> $DIR/auxiliary/use_by_macro.rs:7:13
   |
LL | /     macro_rules! $macro_name {
LL | |         (define) => {
LL | |             pub struct MyStruct;
   | |             ^^^^^^^^^^^^^^^^^^^^
   | |             |
   | |             `MyStruct` redefined here
   | |             previous definition of the type `MyStruct` here
LL | |         };
...  |
LL | |         };
LL | |     }
   | |_____- in this expansion of `my_struct!`
   |
  ::: $DIR/cross-crate-redefine.rs:10:1
   |
LL |   my_struct!(define);
   |   ------------------ in this macro invocation
   |
   = note: `MyStruct` must be defined only once in the type namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
